maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:16: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.IslandMaze'
override def run() {
             ^